--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             </div>
             <div class="mb-3 form-check">
               <input type="checkbox" class="form-check-input" id="exampleCheck1">
-              <button type="submit" class="btn btn-primary">Submit</button>
+              <button type="submit" class="btn btn-success">Submit</button>
           </form>
         </div>
       </div>
