--- a/index.html
+++ b/index.html
@@ -172,25 +172,33 @@
       </div>
       <div class="row justify-content-center mb-3">
         <div class="col-md-6">
-          <form>
+          <div class="alert alert-success alert-dismissible fade show d-none my-alert" role="alert">
+            <strong>Pesan Anda telah terkirim.</strong> You should check in on some of those fields below.
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+          <form name="form-setyawan-email">
             <div class="mb-3">
-              <label for="exampleInputEmail1" class="form-label">Nama Lengkap</label>
-              <input type="email" class="form-control" id="nama" aria-describedby="emailHelp">
+              <label for="name" class="form-label">Nama Lengkap</label>
+              <input type="text" class="form-control" id="nama" aria-describedby="name" name="nama">
             </div>
             <div class="mb-3">
               <label for="exampleInputEmail1" class="form-label">Email address</label>
-              <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
+              <input type="email" class="form-control" id="email" aria-describedby="emailHelp" name="email">
             </div>
             <div class="mb-3">
-              <label for="exampleFormControlTextarea1" class="form-label">Pesan</label>
-              <textarea class="form-control" id="pesan" rows="3"></textarea>
+              <label for="pesan" class="form-label">Pesan</label>
+              <textarea class="form-control" id="pesan" rows="3" name="pesan"></textarea>
             </div>
-            <div class="mb-3 form-check">
-              <button type="submit" class="btn btn-success">Submit</button>
+
+            <button type="submit" class="btn btn-success btn-kirim">Submit</button>
+
+            <button class="btn btn-success btn-loading d-none" type="button" disabled>
+              <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+              Loading...
+            </button>
           </form>
         </div>
       </div>
-    </div>
     </div>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
       <path fill="rgb(5, 122, 122)" fill-opacity="1"
@@ -203,14 +211,47 @@
   <!--footer-->
   <footer class="text-white text-center pb-3" style="background-color: rgb(5, 122, 122);">
     <p>Created by <i class="bi bi-instagram"></i> <a href="https://www.instagram.com/setyawan_utomo/"
-        class="text-white fw-bold">Setyawan Wahyu
-        Utomo</a></p>
+        class="text-white fw-bold">Setyawan Wahyu Utomo</a></p>
   </footer>
   <!--footer-->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
   </script>
+
+  <script>
+    const scriptURL =
+      'https://script.google.com/macros/s/AKfycbyF5p3LY4gTNZnSWg7Vk3BXCNop4SFCkGffZGsKQluRsgZw8kK7EoaNp7AP_lkTDMw/exec'
+    const form = document.forms['form-setyawan-email']
+    const btnKirim = document.querySelector('.btn-kirim');
+    const btnLoading = document.querySelector('.btn-loading');
+    const myAlert = document.querySelector('.my-alert');
+
+    form.addEventListener('submit', e => {
+      e.preventDefault()
+      //saat diklik submit
+      //tampil btn loading hilang kirim
+      btnLoading.classList.toggle('d-none');
+      btnKirim.classList.toggle('d-none');
+
+      fetch(scriptURL, {
+          method: 'POST',
+          body: new FormData(form)
+        })
+        .then(response => {
+          //tampil btn kirim hilang loading
+          btnLoading.classList.toggle('d-none');
+          btnKirim.classList.toggle('d-none');
+          //tampil alert
+          myAlert.classList.toggle('d-none');
+          //reset form
+          form.reset();
+          console.log('Success!', response)
+        })
+        .catch(error => console.error('Error!', error.message))
+    })
+  </script>
+
 </body>
 
 </html>
