--- a/index.html
+++ b/index.html
@@ -69,14 +69,16 @@
     <div class="container text-center">
       <div class="row mb-3">
         <h2>About me</h2>
-        <div class="row justify-content-center fs-5 text-center">
+        <div class="row justify-content-center fs-5" style="text-align:center">
           <div class="col-md-4 mb-3">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis aut nesciunt numquam pariatur
-              perspiciatis ipsum perferendis consectetur voluptatem sequi vel.</p>
+            <p>Lahir di Sukoharjo, 21 Oktober 1996. Saya menerima gelar sarjana komputer dari Universitas Ahmad Dahlan
+              pada tahun 2020. Saya adalah orang yang sangat antusias dengan segala hal berbau analisis dan merasa
+              tertantang untuk mengerjakan projek-projek baru pembuatan design atau UI/UX aplikasi.</p>
           </div>
           <div class="col-md-4 mb-3">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis quas earum enim voluptates. Nisi aliquid
-              obcaecati, eos expedita voluptas quo qui adipisci deserunt corrupti earum.</p>
+            <p>Saya adalah orang yang senang dan mudah bersosialisasi, bertemu, bahkan bekerja sama dengan orang yang
+              baru saya kenal. Saya pun dikenal sebagai pendengar yang baik sehingga mampu menangkap inti persoalan dan
+              memberikan solusi yang tepat.</p>
           </div>
         </div>
       </div>
@@ -102,8 +104,7 @@
           <div class="card">
             <img src="img/Untitled design.jpg" class="card-img-top" alt="project1">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
+              <p class="card-text">Jari yang ingin menggapai.</p>
             </div>
           </div>
         </div>
@@ -111,8 +112,7 @@
           <div class="card">
             <img src="img/exercise.png" class="card-img-top" alt="project2">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
+              <p class="card-text">Jangan Ragu Melangkah.</p>
             </div>
           </div>
         </div>
@@ -120,8 +120,7 @@
           <div class="card">
             <img src="img/coba2.jpg" class="card-img-top" alt="project3">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
+              <p class="card-text">Dirumah saja.</p>
             </div>
           </div>
         </div>
@@ -129,8 +128,7 @@
           <div class="card">
             <img src="img/akukamu.jpg" class="card-img-top" alt="project3">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
+              <p class="card-text">Terkagum.</p>
             </div>
           </div>
         </div>
@@ -138,8 +136,7 @@
           <div class="card">
             <img src="img/seaoflight.jpg" class="card-img-top" alt="project3">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
+              <p class="card-text">Sea of light Temanggung.</p>
             </div>
           </div>
         </div>
@@ -147,8 +144,7 @@
           <div class="card">
             <img src="img/skywave.jpg" class="card-img-top" alt="project3">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
+              <p class="card-text">Sky Wave Sumbing.</p>
             </div>
           </div>
         </div>
